# SageMotion-Publish

./: CODEOWNSERS  README.md  pyproject.toml
sagemotion_publish/: __init__.py  __main__.py  build.py
sagemotion_publish/assets/: __init__.py
sagemotion_publish/templates/: __init__.py  index.html
