[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemotion-publish"
version = "0.1.0"
description = "Shared publish tooling for SageMotion apps"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "SageMotion" }
]
keywords = ["publishing", "packaging", "sagemotion"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SageMotionApps/SageMotion-Publish"
Repository = "https://github.com/SageMotionApps/SageMotion-Publish"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sagemotion_publish*"]

[tool.setuptools.package-data]
sagemotion_publish = ["assets/*.png", "templates/*.html"]
